Make website header responsive and remove fixed positioning
Revert header from fixed positioning to relative, addressing layout issues and removing unnecessary body padding.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,10 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Add body padding for fixed header */
-body {
-  padding-top: 64px;
-}
+
 
 
 
